# Univer-2021-PiORE-Lab4

./: main.py  pyproject.toml
frontend/: correlations.py  correlations.ui  dispersions  dispersions.py  dispersions.ui  features.py  features.ui  impacts.py  impacts.ui  main_window.py  main_window.ui
lib/: Data.py
