[tool.poetry]
name = "2021-12-09-lab4.py"
version = "0.1.0"
description = ""
authors = ["pushsla <push2001sla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.6"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
